# markdown-viewer

./: .gitignore  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  eslint.config.js  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  git-flow.md  testing.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs
src/app/: AppContext.tsx  reducer.ts
src/features/explorer/: FileTree.tsx  RecentFiles.tsx  Sidebar.tsx
src/features/markdown/: BlockRenderer.tsx  MarkdownRenderer.tsx  VirtualizedRenderer.tsx  block-splitter.ts  plugins.ts
src/features/theme/: tokens.css
src/features/toolbar/: Toolbar.tsx
src/shared/ipc/: index.ts
src/shared/types/: index.ts
src/styles/: code-highlight.css  global.css  markdown.css  sidebar.css  toolbar.css
tests/: app.test.tsx  block-splitter.test.ts  markdown-renderer.test.tsx  reducer.test.ts  setup.ts  test-utils.tsx  toolbar.test.tsx
